# camvidlog2

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: docker.yml  pre-commit.yml  test.yml
src/camvidlog2/: __init__.py  __main__.py  ai.py  cli.py  data.py  ha_mqtt_client.py  queries.py  run.py  vid.py
src/camvidlog2/bioclip/: cli.py  data.py  plots.py  queries.py
src/camvidlog2/common/: config.py  data.py  timer.py
src/camvidlog2/common/nms/: np.py  torch.py
src/camvidlog2/moondream/: ai.py  cli.py  data.py  plot.py
src/camvidlog2/yoloe/: ai.py  cli.py  data.py  plot.py
test/: conftest.py  test_ai.py  test_data.py  test_ha_mqtt_client.py  test_plotting.py  test_queries.py  test_vid.py
test/bioclip/: conftest.py  test_bioclip_ai.py  test_bioclip_data.py  test_bioclip_plotting.py  test_biolcip_queries.py  test_data.py  test_queries.py
test/data/: .gitignore
test/yoloe/: test_yoloe_ai.py
