[project]
name = "camvidlog2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.15.2",
    "open-clip-torch>=2.31.0",
    "opencv-python-headless>=4.11.0.86",
    "pandas[feather,performance]>=2.2.3",
    "pandas-stubs>=2.2.3.250308",
    "scikit-learn>=1.6.1",
    "pydantic>=2.10.6",
    "seaborn>=0.13.2",
    "types-seaborn>=0.13.2.20250516",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ipykernel>=6.29.5",
    "scalene>=1.5.51",
    "pre-commit>=4.2.0",
    "mypy>=1.15.0",
    "ruff>=0.11.7",
]


[project.scripts]
camvidlog2 = "camvidlog2:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = ["camvidlog2"]

[[tool.mypy.overrides]]
module = ["open_clip.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--cov=camvidlog2 --no-cov-on-fail"
testpaths = ["test"]
